--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,10 +8,12 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.9
 neo4j==5.17.0
-qdrant-client==1.7.3
-langchain==0.1.5
-langchain-openai==0.0.5
-langchain-google-genai==0.0.8
+qdrant-client>=1.7.3
+langchain>=0.1.10
+langchain-openai>=0.0.5
+langchain-google-genai>=0.0.8
+langgraph
+langchain-community>=0.0.20
 httpx==0.26.0
 python-dotenv==1.0.1
 pandas==2.2.0
